--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pyrogram
-tgcrypto
+TgCrypto-pyrofork
 requests
 aiofiles
 ffmpeg-python
@@ -12,6 +12,7 @@ Pillow
 olefile
 filetype
 motor
-https://github.com/Tinche/aiofiles/archive/master.zip
+git+https://github.com/Tinche/aiofiles.git@master#egg=aiofiles
 dnspython
 psutil
+python-dotenv
