--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,24 @@
-pyrogram
-TgCrypto-pyrofork
-requests
-aiofiles
-ffmpeg-python
-asyncio
-aiohttp
-beautifulsoup4
-hachoir
-numpy
-Pillow
-olefile
-filetype
-motor
-git+https://github.com/Tinche/aiofiles.git@master#egg=aiofiles
-dnspython
-psutil
-python-dotenv
+# Core Telegram & Async Dependencies
+pyrogram==2.0.106
+tgcrypto-pyrofork==1.2.5
+aiofiles @ git+https://github.com/Tinche/aiofiles.git@master
+asyncio ; python_version < "3.11"  # Built-in for Python 3.11+
+aiohttp==3.9.5
+dnspython==2.6.1
+motor==3.4.0  # Async MongoDB
+
+# Networking & Parsing
+requests==2.32.2
+beautifulsoup4==4.12.3
+hachoir==3.2.0
+filetype==1.2.0
+
+# Media Processing
+ffmpeg-python==0.2.0
+numpy==1.26.4
+Pillow==10.3.0
+olefile==0.46
+
+# System Utils
+psutil==5.9.8
+python-dotenv==1.0.1
